fix word-spacing and letter-spacing for section h1 and p

--- a/css/style.css
+++ b/css/style.css
@@ -126,11 +126,15 @@ section h1 {
   font-family: "Bebas Neue", cursive;
   font-size: 80px;
   padding: 30px;
+  word-spacing: 10px;
+  letter-spacing: 15px;
 }
 
 section p {
   font-size: 14px;
   margin-bottom: 50px;
+  word-spacing: 2px;
+  letter-spacing: 2px;
 }
 
 .main-button {
